// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapse prop 1`] = `
<button
  className="sc-bdVaJa inYaTw"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
<button
  className="sc-bdVaJa esEDpg"
  disabled={true}
/>
`;

exports[`renders correctly with expand prop 1`] = `
<button
  className="sc-bdVaJa eKdbXJ"
/>
`;

exports[`renders correctly with hidden prop 1`] = `
<button
  className="sc-bdVaJa ewtnhF"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
<button
  className="sc-bdVaJa eiQouW"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
<button
  className="sc-bdVaJa jJHyWK"
/>
`;

exports[`renders correctly with small prop 1`] = `
<button
  className="sc-bdVaJa eozGhW"
/>
`;
